<resources>
    <string name="app_name">Lovely Movies Info</string>
    <string name="hint">Search a movie…</string>
    <string name="movie_id">movie_id</string>
    <string name="movie_edit">movie_edit</string>
    <string name="movie_add_from_internet">movie_add_from_internet</string>
    <string name="button1_addMovie">Add Your Movie</string>
    <string name="textView1_addMovie">Title:(*)</string>
    <string name="textView2_addMovie">Overview:</string>
    <string name="textView3_addMovie">URL:</string>
    <string name="textView4_addMovie">Add Movie</string>
    <string name="button1_addMovie2">Add Your Movie</string>
    <string name="textView1_addMovie2">Title:(*)</string>
    <string name="textView2_addMovie2">Overview:</string>
    <string name="textView3_addMovie2">URL:</string>
    <string name="textView4_addMovie2">Add Movie</string>
    <string name="button1_fromInternet">Add Your Movie</string>
    <string name="textView1_fromInternet">Title:(*)</string>
    <string name="textView2_fromInternet">Overview:</string>
    <string name="textView3_fromInternet">URL:</string>
    <string name="textView4_fromInternet">Add Movie from internet</string>
    <string name="button1_fromInternet2">Add Your Movie</string>
    <string name="textView1_fromInternet2">Title:(*)</string>
    <string name="textView2_fromInternet2">Overview:</string>
    <string name="textView3_fromInternet2">URL:</string>
    <string name="textView4_fromInternet2">Add Movie from internet</string>
    <string name="button1_deleteData">YES</string>
    <string name="button2_deleteData">NO</string>
    <string name="textView1_deleteData">Are you sure you want to delete all your data?</string>
    <string name="button1_deleteData2">YES</string>
    <string name="button2_deleteData2">NO</string>
    <string name="textView1_deleteData2">Are you sure you want to delete all your data?</string>
    <string name="button1_deleteMovie">OK</string>
    <string name="textView1_deleteMovie">The movie are deleted…</string>
    <string name="button1_deleteMovie2">OK</string>
    <string name="textView1_deleteMovie2">The movie are deleted…</string>
    <string name="textView1_editMovie">Title:(*)</string>
    <string name="textView2_editMovie">Overview:</string>
    <string name="textView3_editMovie">URL:</string>
    <string name="button1_editMovie">Confirm Edit</string>
    <string name="textView4_editMovie">Edit Movie</string>
    <string name="button3_editMovie">Show</string>
    <string name="textView5_editMovie">Watched movie?</string>
    <string name="radioButton1_editMovie">Yes</string>
    <string name="radioButton2_editMovie">No</string>
    <string name="textView1_editMovie2">Title:(*)</string>
    <string name="textView2_editMovie2">Overview:</string>
    <string name="textView3_editMovie2">URL:</string>
    <string name="button1_editMovie2">Confirm Edit</string>
    <string name="textView4_editMovie2">Edit Movie</string>
    <string name="button3_editMovie2">Show</string>
    <string name="textView5_editMovie2">Watched movie?</string>
    <string name="radioButton1_editMovie2">Yes</string>
    <string name="radioButton2_editMovie2">No</string>
    <string name="textView1_itemRow">Overview:</string>
    <string name="textView1_itemRow2">Overview:</string>
    <string name="textView1_itemRowInternet">Overview:</string>
    <string name="textView1_itemRowInternet2">Overview:</string>
    <string name="textView1_dataMovie">Title:(*)</string>
    <string name="textView2_dataMovie">Overview:</string>
    <string name="textView3_dataMovie">URL:</string>
    <string name="textView4_dataMovie">Info Movie</string>
    <string name="button2_dataMovie">OK</string>
    <string name="textView5_dataMovie">Watched movie?</string>
    <string name="textView1_dataMovie2">Title:(*)</string>
    <string name="textView2_dataMovie2">Overview:</string>
    <string name="textView3_dataMovie2">URL:</string>
    <string name="button1_dataMovie2">OK</string>
    <string name="textView4_dataMovie2">Info Movie</string>
    <string name="textView5_dataMovie2">Watched movie?</string>
    <string name="button3_fromInternet">Show</string>
    <string name="button3_fromInternet2">Show</string>
    <string name="textView1_credits">All rights reserved to the creator of the application \n - \n Elior Cohen \n\n Email: \n eliorjobcohen@gmail.com</string>
    <string name="textView1_credits2">All rights reserved to the creator of the application \n - \n Elior Cohen \n\n Email: \n eliorjobcohen@gmail.com</string>
    <string name="button1_credits">OK</string>
    <string name="button1_credits2">OK</string>
    <string name="textView1_finger">Fingerprint Authentication</string>
    <string name="textView2_finger">Place your Finger on the Scanner to Proceed</string>
    <string name="button1_finger">Back</string>
    <string name="textView1_finger2">Fingerprint Authentication</string>
    <string name="textView2_finger2">Place your Finger on the Scanner to Proceed</string>
    <string name="button1_finger2">Back</string>
    <string name="button2_finger">Put password…</string>
    <string name="button2_finger2">Put password…</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello User!</string>
    <string name="text_title">User Accounts List</string>
    <string name="textView1_Login">Login</string>
    <string name="textView2_Login">Have a FingerPrint?</string>
    <string name="button1_Login">FingerPrint</string>
    <string name="textView1_Login2">Login</string>
    <string name="textView2_Login2">Have a FingerPrint?</string>
    <string name="button1_Login2">FingerPrint</string>
    <string name="textView1_Register">Register</string>
    <string name="button1_Register">Already a member? Login</string>
    <string name="textView1_Register2">Register</string>
    <string name="button1_Register2">Already a member? Login</string>
    <string name="button1_users">Cancel</string>
    <string name="button1_users2">Cancel</string>
    <string name="default_notification_channel_id">1</string>
    <string name="search">Search…</string>
    <string name="key_search">API_KEY</string>
</resources>
