<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginPackage.FingerPrint">

    <TextView
        android:id="@+id/headingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/textView1_finger"
        android:textColor="@color/colorLightBlue2"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/fingerprintImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/ic_fingerprint_lightblue_24dp" />

    <TextView
        android:id="@+id/paraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/textView2_finger"
        android:textAlignment="center"
        android:textColor="@color/colorLightBlue2" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/button1_finger"
        android:textColor="@color/colorWhite" />
</LinearLayout>